<resources>
    <string name="app_name">ToDo List App</string>
    <string name="edit_title">Title</string>
    <string name="edit_description">Description</string>
    <string name="edit_date">Date</string>
    <string name="edit_priority">Priority</string>
    <string name="edit_high">High</string>
    <string name="edit_medium">Medium</string>
    <string name="edit_low">Low</string>
    <string name="edit_save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="alert_message">Do you want to main screen?</string>
    <string name="alert_delete_all">Do you want to delete all tasks?</string>
    <string name="alert_delete_comp">Do you want to delete all completed tasks?</string>
    <string name="alert_logout">Do you want to Logout?</string>
    <string name="ok">Ok</string>
    <string name="status">Status</string>
    <string name="list">All ToDoList</string>
    <string name="task">Tasks</string>
    <string name="today_todo">Display Current Day ToDo List</string>

    <!--    Dashboard string name-->
    <string name="please_wait">Please wait...</string>
    <string name="account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="user">User Name</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="create_account">Login to continue your account</string>
</resources>